--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lucia-auth/adapter-sqlite": "^3.0.1",
     "better-sqlite3": "^9.4.3",
+    "lucia": "^3.2.0",
     "next": "14.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
